--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,18 @@
-{{page-title "LibraryUi"}}
+<div class="app">
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+  <nav class="main-nav">
+    <h1 class="logo">
+      <a href>
+        <img src="/logo.svg" alt="Ember Library">
+        <span class="sr-only">Ember Library</span>
+      </a>
+    </h1>
 
-{{outlet}}
+    <ul>
+      <li><a href>Author</a></li>
+      <li><a href>Books</a></li>
+    </ul>
+  </nav>
+
+  <main class="app-content">{{outlet}}</main>
+</div>
