--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,2 +1,7 @@
-{{page-title "Index"}}
-{{outlet}}
+<div class="welcome-page">
+  <img src="/welcome.svg" alt="Welcome">
+
+  <h2>Welcome to Ember Library</h2>
+  <hr>
+  <h3>Where anyone can review their favorite books and authors!</h3>
+</div>
